[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/GUI/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://interface/theme/default.theme" type="Theme" id=2]
[ext_resource path="res://assets/ui/char_statusbar_full.png" type="Texture" id=3]
[ext_resource path="res://interface/UI/StatsRow.tscn" type="PackedScene" id=4]
[ext_resource path="res://combat/interface/ActorPanel.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/char_statusbar_empty.png" type="Texture" id=7]
[ext_resource path="res://interface/UI/level_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://interface/theme/fonts/actor_panel_name_font.tres" type="DynamicFont" id=9]

[node name="ActorPanel" type="Control"]
margin_right = 840.0
margin_bottom = 364.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatus" type="TextureProgress" parent="."]
margin_left = 7.12225
margin_top = 5.0524
margin_right = 807.122
margin_bottom = 365.052
value = 40.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="PlayerStatus"]
margin_left = 70.0
margin_top = 127.0
margin_right = 168.0
margin_bottom = 227.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PlayerStatus"]
margin_left = 334.0
margin_top = 16.0
margin_right = 726.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="PlayerStatus"]
margin_left = 188.0
margin_top = 150.0
margin_right = 725.0
margin_bottom = 205.0
align = 1
valign = 1

[node name="StatsRow" parent="." instance=ExtResource( 4 )]
